fixed various layout issues for safari

--- a/_sass/cheese.scss
+++ b/_sass/cheese.scss
@@ -1,6 +1,6 @@
 div.product-slide {
   width: 100%;
-  min-height: 70%;
+  padding: 15% 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,11 +10,12 @@ div.product-slide {
 .product-details {
   display: flex;
   flex-direction: column;
-  margin-top: 5rem;
+  margin: 5rem auto 0 auto;
   padding: 0 2rem;
   display: flex;
   justify-content: space-between;
   min-width: 70%;
+  max-width: 1000px;
 }
 li.ingredient {
   color: $grey;
@@ -22,10 +23,11 @@ li.ingredient {
   line-height: 2;
 }
 .product-gallery {
-  margin: 2rem 0;
+  margin: 2rem auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
+  // max-width: 1000px;
 }
 img.product-image {
   width: 300px;
