--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -27,15 +27,15 @@ body {
   width: 100%;
   height: 100%;
 }
-#universal-container {
-  width: 100%;
-  // height: 100vh;
-  // overflow-y: scroll;
-  // scroll-behavior: smooth;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+// #universal-container {
+//   width: 100%;
+//   height: 100vh;
+//   // overflow-y: scroll;
+//   // scroll-behavior: smooth;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+// }
 h1 {
   font: 100% Campton-Bold;
   font-size: 40px;
